@@ -11,6 +11,7 @@ NEW FEATURES
  * Issue #242: Process.get_children(recursive=True): return all process
    descendants.
  * Issue #245: (POSIX) Process.wait() incrementally consumes less CPU cycles.
+ * Issue #258: (Linux) Process.get_memory_info() is now 0.5x faster.
 
 BUGFIXES
 
